AI: Complete investor-ready enhancements with professional guest demo
Major Enhancements:
- Fixed floor plan persistence bug - positions now save to database
- Eliminated memory leaks in timeouts and event listeners
- Hardened security with input sanitization and rate limiting
- Added comprehensive loading states and error boundaries
- Created rich demo data seeder for presentations
- Optimized performance with React.memo

Professional Guest Demo:
- Simple login: Username 'Guest', Password 'Temp1'
- Professional welcome modal with Mike Young attribution
- Clean footer branding throughout app
- One-click 'Try Demo' button for instant access
- Industry-agnostic messaging for broader appeal
- Auto-cleanup of guest data after 2 hours

Security Improvements:
- Input sanitization for XSS prevention
- Rate limiting on API endpoints (10/min per user)
- File size/type validation for uploads
- Authentication required on transcribe endpoint

Demo Setup:
- npm run setup-guest (creates guest account)
- npm run seed-demo (populates sample data)

Ready for professional demos and investor presentations
See AI_CHANGES_LOG.md for detailed changes

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "supabase:start": "supabase start",
     "supabase:stop": "supabase stop",
     "supabase:status": "supabase status",
+    "seed-demo": "tsx scripts/seed-demo-data.ts",
+    "setup-guest": "tsx scripts/setup-guest-account.ts",
     "supabase:migrate": "supabase db push",
     "prepare": "husky install"
   },
